Update contact links and Anti Brainrot install URL

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ PASTE_REPO_LINKS
       <p class="subtitle">Retro pink tools for focus, creativity, and calm.</p>
       <div class="button-row">
         <a class="btn" href="https://github.com/Joona-t" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="btn" href="https://x.com/Joona-t" target="_blank" rel="noreferrer">X</a>
-        <a class="btn" href="mailto:215574532+Joona-t@users.noreply.github.com">Email</a>
+        <a class="btn" href="https://x.com/The_Null_Path" target="_blank" rel="noreferrer">X</a>
+        <a class="btn" href="mailto:tyrninoksa.joona@gmail.com">Email</a>
       </div>
     </section>
 
@@ -62,7 +62,7 @@ PASTE_REPO_LINKS
           <h3>Anti Brainrot <span>(Chrome Extension)</span></h3>
           <p>Inspired by Unhook. Removes YouTube algorithm distractions.</p>
           <div class="actions">
-            <a class="btn btn-small" href="https://github.com/Joona-t/LoveSpark-Cards" target="_blank" rel="noreferrer">Install</a>
+            <a class="btn btn-small" href="https://chromewebstore.google.com/detail/hjelmbgmpfmdimlkiodnembgnolojppm?utm_source=item-share-cb" target="_blank" rel="noreferrer">Install</a>
             <a class="btn btn-small" href="https://github.com/Joona-t/LoveSpark-Cards" target="_blank" rel="noreferrer">Source</a>
           </div>
         </article>
