Keep published projects only and add VS Code theme link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 ﻿<!doctype html>
 <!-- EDIT ME:
-YOURUSERNAME
-YOURHANDLE
-you@example.com
-PASTE_CHROME_EXTENSION_LINK
-PASTE_CHROME_THEME_LINK
-PASTE_FIREFOX_LINK
-PASTE_EDGE_LINK
-PASTE_REPO_LINKS
+X_PROFILE_URL
+EMAIL_ADDRESS
+ANTI_BRAINROT_INSTALL_URL
+ANTI_BRAINROT_SOURCE_URL
+VSCODE_THEME_MARKETPLACE_URL
 -->
 <html lang="en">
 <head>
@@ -68,28 +65,10 @@ PASTE_REPO_LINKS
         </article>
 
         <article class="card">
-          <h3>LoveSpark Retro Pink <span>(Chrome Theme)</span></h3>
-          <p>Retro bubblegum vaporwave theme with calm gradients and clean contrast.</p>
+          <h3>Valentine Light <span>(VS Code Theme)</span></h3>
+          <p>Soft retro pink developer theme for calm, readable coding sessions.</p>
           <div class="actions">
-            <a class="btn btn-small" href="https://github.com/Joona-t/LoveSpark-Cards" target="_blank" rel="noreferrer">Store</a>
-            <a class="btn btn-small" href="https://github.com/Joona-t/LoveSpark-Cards" target="_blank" rel="noreferrer">Repo</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <h3>Firefox Version</h3>
-          <p>Parallel release for Firefox users who want the same distraction-free look.</p>
-          <div class="actions">
-            <a class="btn btn-small" href="https://github.com/Joona-t/LoveSpark-Cards" target="_blank" rel="noreferrer">Install</a>
-            <a class="btn btn-small" href="https://github.com/Joona-t/LoveSpark-Cards" target="_blank" rel="noreferrer">Source</a>
-          </div>
-        </article>
-
-        <article class="card">
-          <h3>Microsoft Edge Version</h3>
-          <p>Edge-compatible package tuned to preserve the LoveSpark visual language.</p>
-          <div class="actions">
-            <a class="btn btn-small" href="https://github.com/Joona-t/LoveSpark-Cards" target="_blank" rel="noreferrer">Install</a>
+            <a class="btn btn-small" href="https://marketplace.visualstudio.com/items?itemName=Joona-t.valentine-light" target="_blank" rel="noreferrer">Install</a>
           </div>
         </article>
       </div>
