Make repo public and add hero photo

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ VSCODE_THEME_MARKETPLACE_URL
       <p class="eyebrow">Portfolio</p>
       <h1>LoveSpark</h1>
       <p class="subtitle">Retro pink tools for focus, creativity, and calm.</p>
+      <figure class="hero-photo-wrap">
+        <img class="hero-photo" src="images/adhd.png" alt="Portrait with ADHD artwork in front of a bookshelf.">
+      </figure>
       <div class="button-row">
         <a class="btn" href="https://github.com/Joona-t" target="_blank" rel="noreferrer">GitHub</a>
         <a class="btn" href="https://x.com/The_Null_Path" target="_blank" rel="noreferrer">X</a>
