Add projects coming-soon note

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ VSCODE_THEME_MARKETPLACE_URL
     </section>
 
     <section class="projects">
-      <h2>Projects</h2>
+      <h2>Projects (more on the way...)</h2>
       <div class="project-grid">
         <article class="card">
           <h3>Anti Brainrot <span>(Chrome Extension)</span></h3>
