Match screenshot pink gradient and add Goodreads button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- EDIT ME:
 X_PROFILE_URL
 EMAIL_ADDRESS
+GOODREADS_PROFILE_URL
 ANTI_BRAINROT_INSTALL_URL
 ANTI_BRAINROT_SOURCE_URL
 VSCODE_THEME_MARKETPLACE_URL
@@ -52,6 +53,14 @@ VSCODE_THEME_MARKETPLACE_URL
         <a class="btn" href="https://github.com/Joona-t" target="_blank" rel="noreferrer">GitHub</a>
         <a class="btn" href="https://x.com/The_Null_Path" target="_blank" rel="noreferrer">X</a>
         <a class="btn" href="mailto:tyrninoksa.joona@gmail.com">Email</a>
+        <a class="btn btn-icon" href="https://www.goodreads.com/user/show/193189842" target="_blank" rel="noreferrer">
+          <span class="icon-book" aria-hidden="true">
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M4 5.5C4 4.12 5.12 3 6.5 3H20v16.5c0 .83-.67 1.5-1.5 1.5H8.5A4.5 4.5 0 0 1 4 16.5V5.5Zm4.5-.5A2.5 2.5 0 0 0 6 7.5v9a2.5 2.5 0 0 0 2.5 2.5H18V5H8.5Z"/>
+            </svg>
+          </span>
+          <span>Goodreads</span>
+        </a>
       </div>
     </section>
 
