--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ VSCODE_THEME_MARKETPLACE_URL
         <a class="btn" href="https://github.com/Joona-t" target="_blank" rel="noreferrer">GitHub</a>
         <a class="btn" href="https://x.com/The_Null_Path" target="_blank" rel="noreferrer">X</a>
         <a class="btn" href="mailto:tyrninoksa.joona@gmail.com">Email</a>
+        <a class="btn" href="https://thenullpath.substack.com/?utm_campaign=profile_chips" target="_blank" rel="noreferrer">Substack</a>
         <a class="btn btn-icon" href="https://www.goodreads.com/user/show/193189842" target="_blank" rel="noreferrer">
           <span class="icon-book" aria-hidden="true">
             <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
