Revert "Add side art around hero card and LoveSpark title icon"
This reverts commit da0abb9d437c0665aa60abdfc448e797f9d3ce2d.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ VSCODE_THEME_MARKETPLACE_URL
   <main class="page">
     <section class="hero card-surface">
       <p class="eyebrow">Portfolio</p>
-      <h1><img class="title-icon" src="/assets/lovespark-icon.png" alt="" aria-hidden="true"> LoveSpark</h1>
+      <h1>LoveSpark</h1>
       <p class="subtitle">Retro pink tools for focus, creativity, and calm.</p>
       <figure class="hero-photo-wrap">
         <img class="hero-photo" src="images/adhd.png" alt="Portrait with ADHD artwork in front of a bookshelf.">
