Add published LoveSpark Retro Pink Chrome Theme card

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@ VSCODE_THEME_MARKETPLACE_URL
             <a class="btn btn-small" href="https://marketplace.visualstudio.com/items?itemName=Joona-t.valentine-light" target="_blank" rel="noreferrer">Install</a>
           </div>
         </article>
+
+        <article class="card">
+          <h3>LoveSpark Retro Pink <span>(Chrome Theme)</span></h3>
+          <p>Bubblegum-retro pink browser theme with smooth gradients and clean readability.</p>
+          <div class="actions">
+            <a class="btn btn-small" href="https://chromewebstore.google.com/detail/ohadfchkfldfppkhbjdfjghcfdlcaakd?utm_source=item-share-cb" target="_blank" rel="noreferrer">Store</a>
+          </div>
+        </article>
       </div>
     </section>
 
