fix: add ko-fi link (ko-fi.com/joonat)

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <section class="support-section" id="support">
     <div class="support-inner">
       <p class="support-text">If LoveSpark brings you joy,<br>consider buying me a coffee&nbsp;♡</p>
-      <a href="https://ko-fi.com" target="_blank" rel="noopener" class="kofi-btn">☕ Buy me a coffee</a>
+      <a href="https://ko-fi.com/joonat" target="_blank" rel="noopener" class="kofi-btn">☕ Buy me a coffee</a>
       <p class="support-sub">No pressure. Every bit keeps this going.</p>
     </div>
   </section>
