--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="footer-links">
       <a href="https://github.com/Joona-t" target="_blank" rel="noopener" class="footer-link">GitHub</a>
       <span class="footer-sep" aria-hidden="true">✦</span>
-      <a href="https://x.com/Joona-t" target="_blank" rel="noopener" class="footer-link">X / Twitter</a>
+      <a href="https://x.com/the_null_path" target="_blank" rel="noopener" class="footer-link">X / Twitter</a>
     </div>
     <p class="footer-heart" aria-hidden="true">♡</p>
   </footer>
