--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
       <h1 class="logo-text">LoveSpark</h1>
       <p class="tagline">Retro pink tools for a calmer,<br>more beautiful internet.</p>
       <p class="sub-tagline">Free&nbsp;&nbsp;·&nbsp;&nbsp;Open source&nbsp;&nbsp;·&nbsp;&nbsp;No ads. Ever.</p>
+
+      <div class="hero-socials">
+        <a href="https://github.com/Joona-t" target="_blank" rel="noopener" class="hero-social-link">GitHub</a>
+        <span class="footer-sep" aria-hidden="true">✦</span>
+        <a href="https://x.com/the_null_path" target="_blank" rel="noopener" class="hero-social-link">X / Twitter</a>
+        <span class="footer-sep" aria-hidden="true">✦</span>
+        <a href="https://thenullpath.substack.com/" target="_blank" rel="noopener" class="hero-social-link">Substack</a>
+        <span class="footer-sep" aria-hidden="true">✦</span>
+        <a href="https://www.goodreads.com/" target="_blank" rel="noopener" class="hero-social-link">Goodreads</a>
+      </div>
+
       <a href="#tools" class="hero-cta">See the tools ✦</a>
 
     </div>
@@ -197,11 +208,6 @@
   <!-- ══════════════════════════════════ FOOTER ════════════════════════════════ -->
   <footer class="site-footer">
     <p class="footer-copy">© LoveSpark. Built with intent.</p>
-    <div class="footer-links">
-      <a href="https://github.com/Joona-t" target="_blank" rel="noopener" class="footer-link">GitHub</a>
-      <span class="footer-sep" aria-hidden="true">✦</span>
-      <a href="https://x.com/the_null_path" target="_blank" rel="noopener" class="footer-link">X / Twitter</a>
-    </div>
     <p class="footer-heart" aria-hidden="true">♡</p>
   </footer>
 
