--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       <div class="hero-cta-group">
         <a href="#tools" class="hero-cta">See the tools ✦</a>
         <a href="https://joona-t.github.io/darkfire-null/" target="_blank" rel="noopener" class="hero-cta hero-cta--null">The Null Path ✦</a>
+        <a href="https://joona-t.github.io/zarathustra/" target="_blank" rel="noopener" class="hero-cta hero-cta--zara">Zarathustra 𓂀</a>
       </div>
 
     </div>
