Add Dreamy Garden 🐛 to the suite

--- a/index.html
+++ b/index.html
@@ -147,6 +147,22 @@
 
       <div class="win98-card">
         <div class="titlebar">
+          <span class="win-title">Dreamy Garden 🐛</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Chrome Extension</div>
+          <p class="card-desc">A psychedelic caterpillar game living in your browser. Grow your worm, chase the sparkles, and disappear into something beautiful.</p>
+          <a href="https://chromewebstore.google.com/detail/nllakccmbjjonaaedadkpifndagdlgga" target="_blank" rel="noopener" class="card-link">Install ✦</a>
+        </div>
+      </div>
+
+      <div class="win98-card">
+        <div class="titlebar">
           <span class="win-title">LoveSpark Cursor Pack</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
