--- a/index.html
+++ b/index.html
@@ -163,6 +163,22 @@
 
       <div class="win98-card">
         <div class="titlebar">
+          <span class="win-title">LoveSpark AdBlock</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Chrome Extension</div>
+          <p class="card-desc">Block ads, trackers, and junk across the web. Fast, lightweight, and privacy-first — no filter list subscriptions required.</p>
+          <a href="https://chromewebstore.google.com/detail/aacjjmhjeldmfgdabmfkgmlnibkioimh" target="_blank" rel="noopener" class="card-link">Install ✦</a>
+        </div>
+      </div>
+
+      <div class="win98-card">
+        <div class="titlebar">
           <span class="win-title">LoveSpark Cursor Pack</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
