Add Reddit Ad Blocker to the suite

--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@
 
       <div class="win98-card">
         <div class="titlebar">
+          <span class="win-title">Reddit Ad Blocker</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Chrome Extension</div>
+          <p class="card-desc">Strip promoted posts, banner ads, and sponsored junk from Reddit. Clean feed, no distractions, no clutter.</p>
+          <a href="https://chromewebstore.google.com/detail/kadnibmobhkdihdphngppcpmjocpcmjf" target="_blank" rel="noopener" class="card-link">Install ✦</a>
+        </div>
+      </div>
+
+      <div class="win98-card">
+        <div class="titlebar">
           <span class="win-title">LoveSpark Cursor Pack</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
