--- a/index.html
+++ b/index.html
@@ -241,6 +241,23 @@
         </div>
       </div>
 
+      <div class="win98-card win98-card--aaron">
+        <div class="titlebar">
+          <span class="win-title">Aaron ◆ Public Knowledge</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Open Access Tool</div>
+          <p class="card-desc">Break through paywalls on academic papers and research. Free, open access to public knowledge — as it should be.</p>
+          <p class="aaron-memorial">In memory of Aaron Swartz (1986–2013)</p>
+          <span class="card-link--soon">Coming soon ♡</span>
+        </div>
+      </div>
+
     </div>
   </section>
 
