--- a/index.html
+++ b/index.html
@@ -261,6 +261,21 @@
     </div>
   </section>
 
+  <!-- ═════════════════════════════════ NOTICE ═════════════════════════════════ -->
+  <section class="notice-section">
+    <div class="notice-inner">
+      <p class="notice-text">
+        Some of these tools are limited by Chrome Web Store policies —
+        restricted permissions, banned APIs, and review rules that
+        weaken what they can do.<br><br>
+        Full-power versions that get rejected from the store
+        will be uploaded to
+        <a href="https://github.com/Joona-t" target="_blank" rel="noopener" class="notice-link">my GitHub</a>
+        so you can install them yourself.
+      </p>
+    </div>
+  </section>
+
   <!-- ═════════════════════════════════ MISSION ═════════════════════════════════ -->
   <section class="mission-section" id="mission">
     <div class="section-header">
