Update Cursor Pack card: now live on Chrome Web Store

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark Cursor Pack</span>
+          <span class="win-title">LoveSpark Retro Cursor Pack</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -205,7 +205,7 @@
         <div class="card-body">
           <div class="card-badge">Chrome Extension</div>
           <p class="card-desc">Replace your boring system cursor with a custom pink sparkle pointer. Small thing. Big mood.</p>
-          <span class="card-link card-link--soon">Coming soon ♡</span>
+          <a href="https://chromewebstore.google.com/detail/kjmmkopchfcpchmkmbcpgbojbnnadkfa" target="_blank" rel="noopener" class="card-link">Install ✦</a>
         </div>
       </div>
 
