Update notice: install or modify

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         Full-power versions that get rejected from the store
         will be uploaded to
         <a href="https://github.com/Joona-t" target="_blank" rel="noopener" class="notice-link">my GitHub</a>
-        so you can install them yourself.
+        so you can install or modify them yourself.
       </p>
     </div>
   </section>
