Add More Coming Soon card to tools grid

--- a/index.html
+++ b/index.html
@@ -258,6 +258,21 @@
         </div>
       </div>
 
+      <div class="win98-card">
+        <div class="titlebar">
+          <span class="win-title">More Coming Soon</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <p class="card-desc">I will be publishing more tools in the near future.</p>
+          <span class="card-link card-link--soon">Stay tuned ♡</span>
+        </div>
+      </div>
+
     </div>
   </section>
 
