Add coming soon panels: Dashboard, Focus Blossom, Focus, Link Cleaner

--- a/index.html
+++ b/index.html
@@ -260,6 +260,70 @@
 
       <div class="win98-card">
         <div class="titlebar">
+          <span class="win-title">LoveSpark Dashboard</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Chrome Extension</div>
+          <p class="card-desc">A place to view all LoveSpark extensions by category.</p>
+          <span class="card-link card-link--soon">Coming soon ♡</span>
+        </div>
+      </div>
+
+      <div class="win98-card">
+        <div class="titlebar">
+          <span class="win-title">Focus Blossom</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Chrome Extension</div>
+          <p class="card-desc">Every blocked site grows a flower garden. The longer you resist, the more it blooms 🌸</p>
+          <span class="card-link card-link--soon">Coming soon ♡</span>
+        </div>
+      </div>
+
+      <div class="win98-card">
+        <div class="titlebar">
+          <span class="win-title">LoveSpark Focus</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Chrome Extension</div>
+          <p class="card-desc">Cute Pomodoro timer with site blocking for focused work sessions 💕</p>
+          <span class="card-link card-link--soon">Coming soon ♡</span>
+        </div>
+      </div>
+
+      <div class="win98-card">
+        <div class="titlebar">
+          <span class="win-title">LoveSpark Link Cleaner</span>
+          <div class="win-buttons">
+            <span class="win-btn" aria-hidden="true">─</span>
+            <span class="win-btn" aria-hidden="true">□</span>
+            <span class="win-btn win-btn-close" aria-hidden="true">✕</span>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="card-badge">Chrome Extension</div>
+          <p class="card-desc">Strips tracking parameters from URLs automatically. Clean links, no data collection, no tracking.</p>
+          <span class="card-link card-link--soon">Coming soon ♡</span>
+        </div>
+      </div>
+
+      <div class="win98-card">
+        <div class="titlebar">
           <span class="win-title">More Coming Soon</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
