Add emoji icons to all panel titles

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">Anti Brainrot</span>
+          <span class="win-title">Anti Brainrot 🧠</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -99,7 +99,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">Valentine Light</span>
+          <span class="win-title">Valentine Light 💌</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -115,7 +115,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark Retro Pink</span>
+          <span class="win-title">LoveSpark Retro Pink 🎀</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -131,7 +131,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark Sponsor Skip</span>
+          <span class="win-title">LoveSpark Sponsor Skip ⏭️</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -163,7 +163,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark AdBlock</span>
+          <span class="win-title">LoveSpark AdBlock 🛡️</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -179,7 +179,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">Reddit Ad Blocker</span>
+          <span class="win-title">Reddit Ad Blocker 🧹</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -195,7 +195,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark Retro Cursor Pack</span>
+          <span class="win-title">LoveSpark Retro Cursor Pack 🖱️</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -211,7 +211,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">I Don't Want Cookies</span>
+          <span class="win-title">I Don't Want Cookies 🍪</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -227,7 +227,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">Popup Blocker</span>
+          <span class="win-title">Popup Blocker 🚫</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -260,7 +260,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark Dashboard</span>
+          <span class="win-title">LoveSpark Dashboard 📊</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -276,7 +276,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">Focus Blossom</span>
+          <span class="win-title">Focus Blossom 🌸</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -292,7 +292,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark Focus</span>
+          <span class="win-title">LoveSpark Focus ⏲️</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -308,7 +308,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">LoveSpark Link Cleaner</span>
+          <span class="win-title">LoveSpark Link Cleaner ✂️</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
@@ -324,7 +324,7 @@
 
       <div class="win98-card">
         <div class="titlebar">
-          <span class="win-title">More Coming Soon</span>
+          <span class="win-title">More Coming Soon ✨</span>
           <div class="win-buttons">
             <span class="win-btn" aria-hidden="true">─</span>
             <span class="win-btn" aria-hidden="true">□</span>
